Fix metatrader button overlap

--- a/src/sass/app/metatrader.scss
+++ b/src/sass/app/metatrader.scss
@@ -258,6 +258,7 @@
     #account_details {
         flex: 0;
         position: relative;
+        min-height: 100px;
 
         .acc-info {
             font-size: $FONT_SIZE_S;
@@ -536,6 +537,8 @@
             display: flex;
         }
         #account_details {
+            min-height: auto;
+
             .add_region {
                 position: unset;
                 display: flex;
